fixed spacing issues

--- a/website/style.css
+++ b/website/style.css
@@ -120,9 +120,9 @@ h1,
   border-top: 1px solid #e4e4ea;
   border-bottom: 1px solid #e4e4ea;
   margin-bottom: 16px;
-  -webkit-box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.2);
-  -moz-box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.2);
-  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.2);
+  -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2);
   background-color: #fff;
 }
 
@@ -131,9 +131,9 @@ h1,
   border-top: 1px solid #eee;
   border-bottom: 1px solid #eee;
   border-left: 2px solid #1163c2;
-  -webkit-box-shadow: 0px 2px 2px 0px rgba(17,99,194,0.3);
-  -moz-box-shadow: 0px 2px 2px 0px rgba(17,99,194,0.3);
-  box-shadow: 0px 2px 2px 0px rgba(17,99,194,0.3);
+  -webkit-box-shadow: 0 2px 2px 0 rgba(17, 99, 194, 0.3);
+  -moz-box-shadow: 0 2px 2px 0 rgba(17, 99, 194, 0.3);
+  box-shadow: 0 2px 2px 0 rgba(17, 99, 194, 0.3);
 }
 
 .snippet-title {
